mesa (9.1.3-7) UNRELEASED; urgency=low

  * Don't call wayland_buffer_is_drm from libgbm, it's in libEGL
    (closes: #712556).
  * Make sure libgbm doesn't have undefined symbols.

 -- Julien Cristau <jcristau@debian.org>  Tue, 25 Jun 2013 21:26:56 +0200

mesa (9.1.3-6) unstable; urgency=low

  * Team upload.

  * debian/libegl1-mesa.symbols:
    + More kfreebsd build fixes. Mark some symbols as linux-any.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Fri, 07 Jun 2013 20:27:55 +0200

mesa (9.1.3-5) unstable; urgency=low

  * Team upload.

  [ Andreas Boll ]
  * debian: Don't install libllvmradeon*.so on kfreebsd-*, fixes FTBFS.

  [ Emilio Pozuelo Monfort ]
  * Upload to unstable.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Fri, 07 Jun 2013 14:12:43 +0200

mesa (9.1.3-4) unstable; urgency=low

  * Team upload.

  [ Andreas Boll ]
  * debian: Fix another kfreebsd-* FTBFS with adding libgl1-mesa-
    dri.install.kfreebsd.in, where we don't install gallium-pipe/*.so

  [ Emilio Pozuelo Monfort ]
  * Release to unstable.

 -- Emilio Pozuelo Monfort <pochu@debian.org>  Fri, 07 Jun 2013 00:50:34 +0200

mesa (9.1.3-3) experimental; urgency=low

  [ Andreas Boll ]
  * debian/not-installed: Remove /etc/drirc, it's shipped since 8.0.5-1.
    Fixes build on hurd.
  * debian: Fix build regression on !hurd.
    Fix it with libgl1-mesa-dri.install.hurd.in, where we don't install drirc.
  * Cherry-pick commit 7de78ce5, 07f2dee and 9622049 from upstream
    (Fixes FTBFS on kfreebsd-*)
    - configure.ac: Remove redundant checks of enable_dri.
    - configure.ac: Build dricommon for DRI gallium drivers
    - configure.ac: Build dricommon for gallium swrast
  * Memory corruption (OOB read/write) in i965 driver [CVE-2013-1872]

  [ Julien Cristau ]
  * Build i915 and i965 on kfreebsd.

 -- Cyril Brulebois <kibi@debian.org>  Thu, 06 Jun 2013 10:29:15 +0200

mesa (9.1.3-2) experimental; urgency=low

  * Team upload.

  [ Julien Cristau ]