@@ -13,7 +13,7 @@ Build-Depends:
  x11proto-gl-dev (>= 1.4.14),
  libxxf86vm-dev,
  libexpat1-dev,
- dpkg-dev (>= 1.15.6),
+ dpkg-dev (>= 1.16.1),
  libxfixes-dev,
  libxdamage-dev,
  libxext-dev,
