@@ -1,8 +1,12 @@
 mesa (9.1.3-7) UNRELEASED; urgency=low
 
+  [ Julien Cristau ]
   * Don't call wayland_buffer_is_drm from libgbm, it's in libEGL
     (closes: #712556).
   * Make sure libgbm doesn't have undefined symbols.
+
+  [ Andreas Boll ]
+  * Use dpkg-buildflags.
 
  -- Julien Cristau <jcristau@debian.org>  Tue, 25 Jun 2013 21:26:56 +0200
 
